# PM_Assistant

./: .gitattributes  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: dense-gpu-server-management-capabilities.yaml  intersight-apis.yaml  webhooks.yaml
env_examples/: .env.example  aha.env.example  intersight-eu.env.example  intersight-us.env.example  intersight.env.example  jira.env.example  snowflake.env.example  webex.env.example
prompts/: feature_feedback_report.md
queries/: API_CustomerCount_QtrTrend.sql  APIcalls_Weekly.sql  Adoption.sql  Adoption_withCustomerCounts.sql  All_API_Calls.sql  AvgWeeklyAPICalls.sql  LicenseEntitlement.sql  LicensesClaimed.sql  NOW_All_CustomersCount.sql  NOW_ITSM.sql  NOW_IncidentMgmt.sql  NOW_SGC.sql  Plugins_Customer_Licenses.sql  Plugins_QtrTrend.sql
report_formats/: adoption_summary.md  feature_feedback.md  jira_update.md  prd.md  research_brief.md
samples/: evidence.sample.json
skills/adoption/: SKILL.md
skills/feedback-scan/: SKILL.md
skills/jira-update/: SKILL.md
skills/prd/: SKILL.md
skills/research/: SKILL.md
src/pm_assistant/: __init__.py  cli.py  mcp_server.py
src/pm_assistant/auth/: __init__.py  aha_auth.py  codex_auth_common.py  intersight_auth.py  jira_auth.py  (+2 more)
tests/: test_adoption_workflow.py  test_auth_loader.py  test_collection_resilience.py  test_imports.py  test_intersight_auth.py  test_intersight_connector.py  test_jira_auth.py  test_jira_connector.py  test_matching.py  test_normalization.py  test_pm_workflows.py  test_report_workflow.py  test_snowflake_connector.py
(+16 files in other folders)
